--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,52 +9,58 @@
     src: url('../fonts/Montserrat-Bold.ttf') format('truetype');
     font-weight: bold;
     font-style: normal;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-Medium.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-Light.ttf') format('truetype');
     font-weight: normal;
     font-style: italic;
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Montserrat';
     src: url('../fonts/Montserrat-SemiBoldItalic.ttf') format('truetype');
     font-weight: bold;
     font-style: italic;
-  }
+}
 
 
-  .fade-in {
+.fade-in {
     opacity: 0;
     animation: fadeIn 2s ease-in forwards;
-  }
-  
-  @keyframes fadeIn {
+}
+
+@keyframes fadeIn {
     from {
-      opacity: 0;
+        opacity: 0;
     }
+
     to {
-      opacity: 1;
+        opacity: 1;
     }
-  }
-  
+}
 
-  .my-font {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 300;
-        text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  }
 
-  .my-font-bold {
+.my-font {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+.font-normal {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+}
+
+.my-font-bold {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
@@ -71,6 +77,7 @@
     font-weight: bold;
     /* text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5); */
 }
+
 .homeBG {
     background: linear-gradient(178.81deg, #107840 100%, #1F5025 32.65%, #107840 62.9%, #28602E 85.85%, #107840 100.14%);
 }
@@ -99,19 +106,35 @@
 }
 
 .logo-animate {
-    animation: mymove 2s infinite;;
+    animation: mymove 2s infinite;
+    ;
 }
 
 @keyframes mymove {
-    0%   {top: 0px;}
+    0% {
+        top: 0px;
+    }
+
     /* 25%  {top: 500px;}
     75%  {top: 50px} */
-    25% {top: 400px;}
-    50% {top : 250px }
-    75% {top: 450px}
-    100%{top: 400px}
+    25% {
+        top: 400px;
+    }
+
+    50% {
+        top: 250px
+    }
+
+    75% {
+        top: 450px
+    }
+
+    100% {
+        top: 400px
+    }
+
     /* 100%{ top: 350px} */
-  }
+}
 
 
 .spin-animate-slow {
@@ -402,8 +425,8 @@
 .scroll-animation {
     opacity: 0;
     transition: opacity 0.4s ease-in-out;
-  }
-  
-  .fade-in {
+}
+
+.fade-in {
     opacity: 1;
-  }
+}
