--- a/styles/globals.css
+++ b/styles/globals.css
@@ -464,3 +464,58 @@
 .fade-in {
     opacity: 1;
 }
+
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .popup-content {
+    background-color: #fff;
+    padding: 20px;
+    padding-top: 40px;
+    padding-bottom: 30px;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 5000;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .popup-content {
+      width: 300px;
+    }
+  }
+
+  .video-iframe {
+    margin-top: 100px;
+    /* width: 1100px; */
+    height: 500px;
+  }
+  
+  /* Media query for mobile screens with a maximum width of 768px */
+  @media (max-width: 768px) {
+    .video-iframe {
+      width: 420px; /* 100% width to fit the container */
+      height: 250px; /* You can adjust the height as per your preference */
+    }
+  }
+
+  .close-button {
+    position: absolute;
+    top: 5px;
+    right: 15px;
+    font-size: 50px;
+    cursor: pointer;
+    color: #fff;
+  }
