--- a/styles/globals.css
+++ b/styles/globals.css
@@ -478,10 +478,10 @@
     align-items: center;
   }
   .popup-content {
-    background-color: #fff;
-    padding: 20px;
+    /* background-color: #fff; */
+    /* padding: 20px;
     padding-top: 40px;
-    padding-bottom: 30px;
+    padding-bottom: 30px; */
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     width: 400px;
@@ -499,7 +499,8 @@
 
   .video-iframe {
     margin-top: 100px;
-    /* width: 1100px; */
+    width:max-content;
+    width: 1100px;
     height: 500px;
   }
   
