--- a/styles/globals.css
+++ b/styles/globals.css
@@ -520,4 +520,36 @@
     cursor: pointer;
     color: #fff;
   }
+
+
+  /* styles.css */
+.app {
+    overflow: hidden;
+  }
+  
+  .testimonial-carousel {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .testimonial-wrapper {
+    display: flex;
+    transform: translateX(calc(100vw));
+    animation: animateContainer 10s linear forwards infinite;
+    animation-play-state: paused;
+  }
+  
+  .testimonial {
+    flex: 0 0 25%; /* Adjust width to show 4 testimonials at once */
+  }
+  
+  @keyframes animateContainer {
+    from {
+      transform: translateX(calc(100vw));
+    }
+    to {
+      transform: translateX(calc(-100%));
+    }
+  }
+  
   
